19-12-2022 PSS fixed wrong colour of status "changesrequested"

--- a/src/wptf-style.css
+++ b/src/wptf-style.css
@@ -1300,6 +1300,10 @@ table.translations tr.preview.status-rejected {
     background-color: #eb9090 !important;
 }
 
+table.translations tr.preview.status-changesrequested {
+    background-color: #87ceeb !important;
+}
+
 table.translations tr.preview.status-fuzzy {
     background-color: #f6a983 !important;
 }
